# Notimy

./: .env  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose-front.yml  docker-compose-prod.yml  docker-compose.yml  main.py  nginx.conf  package-lock.json  pyproject.toml  requirements.txt  test_api.py
backend/: .dockerignore  .env  Dockerfile  Makefile  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 1c6a4ad04bed_.py  32b28e705cde_init.py  43f462e6f7cd_.py  54f3a7c918ee_add_subsctription.py  737aab11cb50_init.py  a9219c8f53de_.py  b53043409896_telegram_api.py  d0a67113c055_initial.py
backend/app/: __init__.py  __main__.py  limiter.py
backend/app/config/: __init__.py  constants.py  default.py
backend/app/data/db/: __init__.py
backend/app/src/: app.py  docs.py  limiter.py  logging.py  routers.py
backend/certs/: cert.pem
backend/migration/: env.py
backend/migration/versions/: 54ea6617ed6f_.py  d0a67113c055_initial.py  e2aa0e769a40_.py
backend/notimy/: __main__.py
backend/notimy/config/: __init__.py  default.py  roles.py
backend/notimy/endpoints/: __init__.py
backend/notimy/middleware/: __init__.py  login_manager.py  token_auth.py
backend/notimy/schemas/: channels.py  providers.py  spots.py
backend/notimy/utils/: __init__.py  code.py  exceptions.py  token.py
backend/tests/: conftest.py  made-test-cases  suggested-test-cases  utils.py
backend/tests/endpoints/: test_create_provider.py  test_create_spot.py  test_user_join.py
backend/tests/fixtures/: __init__.py  channel.py  provider.py  spot.py
backend/tests/playground/: create_channel.py  join_channel.py  me.py
backend/tests/test_database/: test_migrations.py
backend/tests/test_enpoints/: test_main.py  test_provider.py  test_root.py
(+359 files in other folders)
