[tool.poetry]
name = "notimy"
version = "0.1.0"
description = ""
authors = ["peplxx"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = {extras = ["async"], version = "^3.0.3"}
pydantic = "^2.8.0"
pydantic-settings = "^2.3.4"
sqlalchemy = "^2.0.31"
fastapi = "^0.111.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
flask-pydantic = "^0.12.0"
requests = "^2.32.3"
pytz = "^2024.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
